--- a/public/m1/a/hello.html
+++ b/public/m1/a/hello.html
@@ -1,14 +1,20 @@
 <!DOCTYPE html>
-<!-- my hello page -->
-<html lang="en">
+<!-- my hello page -->  <!--questo è un commento-->   
+<html lang="en">    <!--normalmente gli attributoi sono così-->
 
 <head>
     <meta charset="utf-8">
     <title>Hello</title>
 </head>
 
-<body>
+<body> 
     <p>Hello world!</p>
+    <div>Contenitore generico</div>     <!--non lascia spazio sotto come il p-->
+    <p hidden>Hello world!</p>  <!--hidden è un attributo booleano, non serve mettere niente dopo, se c'è l'elemento vuol dire che è true-->
+    <b>Hello!</b>  <!--mi mette i due ciao affiancati perchè modalità display inline, solo se la pagina è troppo stretta vanno a capo-->
+    <b>Hello!</b>
+    <span>Hello</span>  <!--è un contenitore generico inline non blocco come dive-->
+    <span>Hello</span>
 </body>
 
 </html>
