--- a/public/m1/a/s08.html
+++ b/public/m1/a/s08.html
@@ -11,12 +11,12 @@
         <h1>Page structure</h1>
     </header>
     <nav>
-        Back <a href="..">home</a>
+        Back <a href="..">home</a>    <!--<a> href</a> è per il link-->
     </nav>
 
     <main>
         <p>The main part of this page</p>
-        <article>
+        <article>                   <!--articolo-->
             <p>An article</p>
             <p>blah, blah, blah ...</p>
 
