--- a/public/m1/b/s03a.html
+++ b/public/m1/b/s03a.html
@@ -3,17 +3,18 @@
 
 <head>
     <meta charset="utf-8">
-    <title>HTML and CSS</title>
-    <style>
-        @import url(https://fonts.googleapis.com/css2?family=Dancing+Script);
+    <title>HTML and CSS</title>    
+    <style>             /* non è consigliato, rende il codice troppo complesso, meglio usare il link*/
+      
+        @import url(https://fonts.googleapis.com/css2?family=Dancing+Script);  /*questo import non è locale al progetto, metto il link*/
 
         body {
-            font-family: 'Dancing Script';
+            font-family: 'Dancing Script';     /*dico di usare il font per tutto il body*/
             font-style: italic;
         }
 
-        p {
-            font-size: 30px;
+        p {                          /*solo p è stilato in questo modo*/
+            font-size: 50px; 
             color: red;
         }
     </style>
