--- a/public/m1/index.html
+++ b/public/m1/index.html
@@ -20,6 +20,7 @@
 		<li><a href="a/s08.html">Page structure</a></li>
 		<li><a href="a/s09.html">Text</a></li>
 		<li><a href="a/s10.html">id vs class</a></li>
+		<li><a href="a/cv.html">Esercizio cv</a></li>
 	</ul>
 
 	<h2>CSS</h2>
