--- a/public/m1/b/s03b.html
+++ b/public/m1/b/s03b.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <title>HTML and CSS</title>
 
-    <link rel="stylesheet" type="text/css" href="css/s03.css">
+    <link rel="stylesheet" type="text/css" href="css/s03.css">  <!--link per file css-->
 </head>
 
 <body>
