--- a/public/m2/a/s03.html
+++ b/public/m2/a/s03.html
@@ -17,7 +17,7 @@
     <h1>Images</h1>
 
     <figure>
-        <img src="img/flower.jpg" alt="a flower">
+        <img src="img/flower.jpg" alt="a flower">        <!--alt è l'altro attributo che viene visualizzato se non si vede la foto-->
     </figure>
 
     <figure>
