--- a/public/m2/a/s04.html
+++ b/public/m2/a/s04.html
@@ -18,7 +18,7 @@
     <h2>Basics</h2>
     <table>
         <caption>Elements table, tr, td, ...</caption>
-        <thead>
+        <thead>   <!--iiga di intestazione-->
             <tr>
                 <th scope="row">\</th>
                 <th scope="col">Left</th>
@@ -27,8 +27,8 @@
             </tr>
         </thead>
         <tr>
-            <th scope="row">Top</th>
-            <td>7</td>
+            <th scope="row">Top</th>   <!--table header cella di rappresentazione-->
+            <td>7</td>    <!--td = table data, è la cella-->
             <td>8</td>
             <td>9</td>
         </tr>
